# vertexauth

./: .gitignore  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
vertexauth/: __init__.py  _modidx.py  anthropic.py  claudette.py  core.py  optional.py
